fix: move buttons to align with outfit selector

--- a/day/day_style.css
+++ b/day/day_style.css
@@ -115,7 +115,7 @@
 /* Outfit select buttons */
 #outfitselect_button_day__under_suit_1 {
   position: absolute;
-  transform: translate(39%, 51%);
+  transform: translate(30%, 51%);
   z-index: 0;
   background: none;
   border: none;
@@ -128,7 +128,7 @@
 
 #outfitselect_button_day__under_suit_2 {
   position: absolute;
-  transform: translate(122%, 51%);
+  transform: translate(105%, 51%);
   z-index: 0;
   background: none;
   border: none;
@@ -141,7 +141,7 @@
 
 #outfitselect_button_day__under_suit_3 {
   position: absolute;
-  transform: translate(204%, 51%);
+  transform: translate(180%, 51%);
   z-index: 0;
   background: none;
   border: none;
